<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="16sp"
        android:text="@string/Quantity"
        android:textAllCaps="true" />

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8sp"
        android:onClick="increment"
        android:text="@string/Button_Plus" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8sp"
        android:text="@string/init_number"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8sp"
        android:onClick="decrement"
        android:text="@string/Button_Min" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="16sp"
        android:text="@string/Price"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="16sp"
        android:text="@string/init_price"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="16sp"
        android:onClick="submitOrder"
        android:text="@string/button"
        android:textColor="@color/black" />

</LinearLayout>
